--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -2,8 +2,10 @@
   width: 100vw;
   height: 100vh;
   margin-top: 25px;
+
+  scroll-snap-align: start;
 }
 
 .footer {
-  scroll-snap-align: start;
+  scroll-snap-align: end;
 }
